# review-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  check_files.py  cliff.toml  config.docker.yaml  config.yaml  docker-compose.yml  mkdocs.yml  package-lock.json  pyproject.toml  pyrightconfig.json  video_annotation.spec
.githooks/: commit-msg
.github/workflows/: build.yml  ci.yml  docs.yml
docs/: annotation_priority.csv  model_import.md  species.csv  species_behaviors.csv  sqlite_migrations_plan.md
docs/csv_templates/: behavior_template.csv  blank_non_blank_template.csv  distance_template.csv  species_template.csv
docs/decisions/: distance-annotation.md  projects-and-config-refactor.md  quick-decline-model-annotation.md  supervisor-analyst-workflow.md  to-dos.md  video-tags.md
docs/scripts/: check_inaturalist.py
review_app/: __init__.py
review_app/app/: __init__.py  config.py  entry_point.py  main.py  media.py  onboarding.py  project_picker.py  setup_wizard.py  state.py  theme.py  translations.py  update_checker.py  utils.py
review_app/app/components/: fuzzy_select.js  fuzzy_select.py  inat_logo.py  location_map.py
review_app/app/pages/: __init__.py  login.py  model_import.py  overview.py  review.py  settings.py
review_app/app/pages/distribution/: __init__.py  page.py
review_app/app/pages/model_import/: __init__.py  _annotations_tab.py  _helpers.py  _metadata_tab.py  _model_tab.py  _species_mapping.py
review_app/app/pages/review/: __init__.py  annotations.py  filters.py  page.py  (+2 more)
review_app/backend/: backup.py  data_provider.py  errors.py  local_data_provider.py  migrations.py  models.py  path_matching.py  species.py  utils.py  video.py
review_app/backend/db/: backup.py  migrations.py  models.py
review_app/backend/provider/: annotation_repository.py  assignment_service.py  base.py  import_service.py  local_data_provider.py  project_repository.py  species.py  stats_service.py  tag_repository.py  video.py  video_queue.py
review_app/data/: behaviors.csv  behaviors_default.csv  default_config.yaml  species.csv  species_behaviors.csv
review_app/frontend/: 1_Pipeline_Overview.py  Overview.py  data_access.py
review_app/frontend/components/: filters.py  formatting.py  history.py  video_player.py
review_app/frontend/pages/: 2_Manual_Review.py  3_Configuration.py  4_Database_Management.py  5_Full_Database.py  6_Model_Import.py
scripts/: dump_schema_snapshot.py  resolve_inaturalist_links.py
scripts/screenshots/: capture.py  capture.sh  capture_wizard.py  seed_demo.py
tests/: conftest.py  test_annotations_utils.py  test_annotator_deletion.py  test_app_state.py  test_app_utils.py  test_assignments_import_export.py  test_backend_utils.py  test_backup.py  test_bulk_review_equivalence.py  test_collections.py  test_deletion_cascade.py  test_distribution_bundle.py  test_historic_import.py  test_import_performance.py  test_local_data_provider.py  test_migrations.py  test_model_csv_validation.py  test_model_import_utils.py  test_onboarding.py  test_path_matching.py  test_project_and_import.py  test_project_species.py  test_provider_misc.py  test_queue_and_export.py  test_schema_parity.py  test_species.py  test_species_mapping_state.py  test_translations.py  test_ui_smoke.py  test_update_project_dir.py
tests/fixtures/: schema_snapshot.sql
userdocs/: dashboard.fr.md  dashboard.md  exporting.fr.md  exporting.md  getting-started.fr.md  getting-started.md  importing.fr.md  importing.md  index.fr.md  index.md  reviewing.fr.md  reviewing.md  settings.fr.md  settings.md
(+14 files in other folders)
