[project]
authors = [{ name = "Jonas" }]
classifiers = ["Programming Language :: Python :: 3"]
name = "video-review-app"
version = "0.1.0"
description = "Desktop app for reviewing and correcting AI annotations on camera trap footage"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "dotenv>=0.9.9",
  "nicegui>=1.4.0",
  "pandas>=2.3.3",
  "pyinstaller>=6.19.0",
  "pywin32; sys_platform == 'win32'",
  "platformdirs>=4.0.0",
  "pyyaml>=6.0.3",
  "sqlalchemy>=2.0.38",
  "thefuzz",
  "pyproj>=3.0.0",
  "ruff>=0.15.13",
]

[tool.ruff]
line-length = 99
src = ["review_app"]
include = ["pyproject.toml", "review_app/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "review_app"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportArgumentType = "none"
reportGeneralTypeIssues = "none"
reportCallIssue = "none"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
