[project]
authors = [{ name = "Jonas" }]
classifiers = ["Programming Language :: Python :: 3"]
name = "video-review-app"
dynamic = ["version"]
description = "Desktop app for reviewing and correcting AI annotations on camera trap footage"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "dotenv>=0.9.9",
  "nicegui>=1.4.0",
  "pandas>=2.3.3",
  "pywin32; sys_platform == 'win32'",
  "platformdirs>=4.0.0",
  "pyyaml>=6.0.3",
  "sqlalchemy>=2.0.38",
  "thefuzz",
  "pyproj>=3.0.0",
]

[tool.ruff]
line-length = 99
src = ["review_app"]
include = ["pyproject.toml", "review_app/**/*.py", "tests/**/*.py", "scripts/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "review_app"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportArgumentType = "none"
reportGeneralTypeIssues = "none"
reportCallIssue = "none"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocs-static-i18n>=1.3.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# nicegui.testing: pages are registered per-test, there is no main.py to auto-import
main_file = ""
# Performance tests build a 205k-row frame and take ~10s each; opt in with `-m slow`.
addopts = "-m 'not slow'"
markers = [
    "slow: import performance benchmarks (deselected by default, run with -m slow)",
]
